--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -91,9 +91,9 @@ run lm3:
     - ssh lm3 mkdir -p ${PATH2RUN}/
     - scp flups_test_nb lm3:${PATH2RUN}/  
     - scp flups_test_a2a lm3:${PATH2RUN}/         
-    - scp flups_test_isr lm3:${PATH2RUN}/                                            #sending the previously compiled exe back to lm3
-    - scp -r test/run/test_run.sh lm3:${PATH2RUN}/                                  #copy the slurm script from the runner
-    - scp -r test/run/test_workflow.sh lm3:${PATH2RUN}/                                  #copy the slurm script from the runner
+    - scp flups_test_isr lm3:${PATH2RUN}/                                           #sending the previously compiled exe back to lm3
+    - scp -r test/run/test_convergence.sh lm3:${PATH2RUN}/                                  #copy the slurm script from the runner
+    - scp -r test/run/test_workflow.sh lm3:${PATH2RUN}/                             #copy the slurm script from the runner
     - ssh lm3 "cd ${PATH2RUN}/ && ./test_workflow.sh ${LIBDIR}"
 
 
