--- a/.gitlab-ci/flups-build.yml
+++ b/.gitlab-ci/flups-build.yml
@@ -5,8 +5,7 @@ compil dbg:
       - ./samples/validation/flups_validation_nb
       - ./samples/validation/flups_validation_a2a
       - ./samples/validation/flups_validation_isr
-      - ./include/LGF_2d_sym_acc12_32.ker
-      - ./include/LGF_3d_sym_acc12_64.ker
+      - ./include/*
     when: on_success
   script:
     - export ARCH_FILE=make_arch/make.docker_valid_dbg
@@ -21,8 +20,7 @@ compil opt:
       - ./samples/validation/flups_validation_nb
       - ./samples/validation/flups_validation_a2a
       - ./samples/validation/flups_validation_isr
-      - ./include/LGF_2d_sym_acc12_32.ker
-      - ./include/LGF_3d_sym_acc12_64.ker
+      - ./include/*
     when: on_success
   script:
     - export ARCH_FILE=make_arch/make.docker_valid_opt
@@ -38,8 +36,7 @@ compil comm:
       - ./samples/validation/flups_validation_nb
       - ./samples/validation/flups_validation_a2a
       - ./samples/validation/flups_validation_isr
-      - ./include/LGF_2d_sym_acc12_32.ker
-      - ./include/LGF_3d_sym_acc12_64.ker
+      - ./include/*
     when: on_success
   script:
     - export ARCH_FILE=make_arch/make.docker_valid_comm
@@ -53,8 +50,7 @@ compil comm:
 #     paths:
 #       - ./samples/validation/flups_validation_nb
 #       - ./samples/validation/flups_validation_a2a
-#       - ./include/LGF_2d_sym_acc12_32.ker
-#       - ./include/LGF_3d_sym_acc12_64.ker 
+#       - ./include/*
 #     when: on_success
 #   script:
 #     - export ARCH_FILE=make_arch/make.docker_valid_metis
@@ -77,8 +73,7 @@ compil vortex_rot:
       - ./samples/solve_vtube/flups_tube_nb
       - ./samples/solve_vtube/flups_tube_a2a
       - ./samples/solve_vtube/flups_tube_isr
-      - ./include/LGF_2d_sym_acc12_32.ker
-      - ./include/LGF_3d_sym_acc12_64.ker
+      - ./include/*
     when: on_success
   script:
     - export ARCH_FILE=make_arch/make.docker_valid_opt
@@ -92,8 +87,7 @@ compil gtest :
     paths: 
       - ./test/flups_test_nb
       - ./test/flups_test_a2a
-      - ./include/LGF_2d_sym_acc12_32.ker
-      - ./include/LGF_3d_sym_acc12_64.ker
+      - ./include/*
     when: on_success
   script:
     - export ARCH_FILE=make_arch/make.docker_gcc_test
